--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
     "compression": "^1.5.1",
     "config": "^1.14.0",
@@ -24,13 +25,16 @@
     "helmet": "^2.0.0",
     "highlight.js": "*",
     "lodash": "^4.17.0",
+    "lunr": "^0.7.2",
     "lusca": "^1.3.0",
     "node-uuid": "^1.4.3",
     "npmlog": "*",
     "nsp": "*",
     "protocolify": "^1.0.2",
     "remarkable": "*",
-    "ws": "^1.0.0"
+    "request-promise": "^4.1.1",
+    "ws": "^1.0.0",
+    "x-ray": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
