--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "omaha-server",
+  "name": "navy-server-api",
+  "description": "The Search API for those that Serve",
   "version": "1.0.0",
   "license": "MIT",
-  "description": "Node.js WebSocket and HTTP servers with an 80% solution for security 'baked in'",
+  "author": "Jason Wohlgemuth",
+  "email": "jhwohlgemuth@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jhwohlgemuth/navy-search-api.git"
+  },
   "keywords": [
-    "websocket",
-    "http",
-    "server",
-    "express",
-    "security"
+    "navy",
+    "search",
+    "api"
   ],
   "main": "index.js",
   "dependencies": {
