--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "docs": "apidoc -i ./web -o ./web/client/docs"
   },
   "apidoc": {
-    "title": "Navy Search RESTful API",
+    "name": "Navy Search API",
+    "title": "Navy Search API",
+    "description": "\"The Search API for those that Serve\"",
     "url": "https://usn.herokuapp.com/v1",
     "sampleUrl": "https://usn.herokuapp.com/v1"
   }
