--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   "devDependencies": {
     "apidoc": "^0.16.1",
     "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
     "mocha": "^3.1.2",
+    "mocha-unfunk-reporter": "^0.4.0",
     "nodemon": "^1.8.1"
   },
   "scripts": {
@@ -53,7 +53,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "docs": "apidoc -i ./web -o ./web/client/docs",
-    "test": "mocha"
+    "test": "mocha test/ -R mocha-unfunk-reporter",
+    "test:watch": "npm test -- -w"
   },
   "apidoc": {
     "name": "Navy Search API",
