Added order to docs and moved apidocs data into apidocs.json

--- a/web/client/docs/api_project.json
+++ b/web/client/docs/api_project.json
@@ -1,14 +1,19 @@
 {
   "name": "Navy Search API",
-  "title": "Navy Search API",
+  "version": "1.0.0",
   "description": "\"The Search API for those that Serve\"",
+  "title": "Navy Search API",
+  "order": [
+    "Message",
+    "NAVADMIN",
+    "ALNAV"
+  ],
   "url": "https://usn.herokuapp.com/v1.0",
   "sampleUrl": "https://usn.herokuapp.com/v1.0",
-  "version": "1.0.0",
   "apidoc": "0.2.0",
   "generator": {
     "name": "apidoc",
-    "time": "2016-11-26T01:09:26.348Z",
+    "time": "2016-11-26T01:27:38.981Z",
     "url": "http://apidocjs.com",
     "version": "0.16.1"
   }
