--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.0",
     "lunr": "^0.7.2",
     "lusca": "^1.3.0",
+    "mongoose": "^4.7.0",
     "node-uuid": "^1.4.3",
     "npmlog": "*",
     "nsp": "*",
