--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-uuid": "^1.4.3",
     "npmlog": "*",
     "nsp": "*",
+    "opbeat": "^4.0.0",
     "protocolify": "^1.0.2",
     "remarkable": "*",
     "request-promise": "^4.1.1",
