--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   "devDependencies": {
     "apidoc": "^0.16.1",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.15",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
+    "mocha-lcov-reporter": "^1.2.0",
     "mocha-unfunk-reporter": "^0.4.0",
     "nodemon": "^1.8.1"
   },
@@ -55,7 +58,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "docs": "apidoc -i ./web -o ./web/client/docs",
-    "test": "mocha test/ -R mocha-unfunk-reporter",
-    "test:watch": "npm test -- -w"
+    "mocha": "mocha -R mocha-unfunk-reporter",
+    "mocha:watch": "npm run mocha -- -w",
+    "test": "istanbul cover _mocha",
+    "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   }
 }
