--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "api"
   ],
   "main": "index.js",
+  "engines": {
+    "node": "^6.0.0"
+  },
   "dependencies": {
     "bluebird": "^3.4.6",
     "bunyan": "^1.8.5",
