--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "navy-server-api",
-  "description": "The Search API for those that Serve",
+  "name": "navy-search",
+  "description": "Search for those that Serve",
   "version": "1.0.0",
   "license": "MIT",
   "author": "Jason Wohlgemuth",
   "email": "jhwohlgemuth@gmail.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhwohlgemuth/navy-search-api.git"
+    "url": "https://github.com/jhwohlgemuth/navy-search.git"
   },
   "keywords": [
     "navy",
