--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "apidoc": "^0.16.1",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "coveralls": "^2.11.15",
     "fs-extra": "^1.0.0",
     "istanbul": "^0.4.5",
