--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
+    "postinstall": "npm run refresh",
     "scan": "nsp check",
-    "prestart": "npm run scan && npm run refresh",
+    "prestart": "npm run scan",
     "start": "node index.js",
     "refresh": "node ./bin/refresh",
     "dev": "nodemon index.js",
