--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "scan": "nsp check",
-    "prestart": "npm run scan && npm run refresh",
+    "prestart": "npm run scan",
     "start": "node index.js",
     "refresh": "node ./bin/refresh",
     "dev": "nodemon index.js",
