Moved yargs into deps

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "remarkable": "*",
     "request-promise": "^4.1.1",
     "ws": "^1.0.0",
-    "x-ray": "^2.3.1"
+    "x-ray": "^2.3.1",
+    "yargs": "^6.5.0"
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
@@ -58,8 +59,7 @@
     "nodemon": "^1.8.1",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.6",
-    "supertest": "^2.0.1",
-    "yargs": "^6.5.0"
+    "supertest": "^2.0.1"
   },
   "scripts": {
     "scan": "nsp check",
