--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "request-promise": "^4.1.1",
     "ws": "^1.0.0",
     "x-ray": "^2.3.1",
-    "yargs": "6.5.0"
+    "yargs": "^6.5.0"
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
