--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.15",
+    "eslint": "^3.12.2",
+    "eslint-config-omaha-prime-grade": "^1.1.0",
     "fs-extra": "^1.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
@@ -68,6 +70,7 @@
     "populate": "node ./bin/populate",
     "update": "node ./bin/update",
     "dev": "nodemon index.js",
+    "lint": "eslint --fix -c ./config/.eslintrc.js --ignore-path ./config/.eslintignore ./web",
     "docs": "apidoc -i ./web -o ./web/client/docs",
     "mocha": "mocha -R mocha-unfunk-reporter",
     "mocha:watch": "npm run mocha -- -w",
