--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "nodemon": "^1.8.1",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.6",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "watch": "^1.0.1"
   },
   "scripts": {
     "scan": "nsp check",
@@ -71,6 +72,7 @@
     "update": "node ./bin/update",
     "dev": "nodemon index.js",
     "lint": "eslint --fix -c ./config/.eslintrc.js --ignore-path ./config/.eslintignore ./web",
+    "lint:watch": "watch 'npm run lint' ./web",
     "docs": "apidoc -i ./web -o ./web/client/docs",
     "mocha": "mocha -R mocha-unfunk-reporter",
     "mocha:watch": "npm run mocha -- -w",
