--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lunr": "^0.7.2",
     "lusca": "^1.3.0",
     "mongoose": "^4.7.0",
+    "navy-message-parser": "0.0.1",
     "node-uuid": "^1.4.3",
     "npmlog": "*",
     "nsp": "*",
