--- a/package.json
+++ b/package.json
@@ -19,32 +19,32 @@
     "node": "^6.0.0"
   },
   "dependencies": {
-    "bluebird": "^3.4.6",
-    "bunyan": "^1.8.5",
+    "bluebird": "^3.5.0",
+    "bunyan": "^1.8.8",
     "compression": "^1.5.1",
     "config": "^1.14.0",
     "cookie-session": "*",
     "dotenv": "^2.0.0",
-    "ejs": "^2.5.0",
+    "ejs": "^2.5.6",
     "express": "^4.13.1",
     "express-session": "^1.15.1",
     "fs-extra": "^1.0.0",
-    "helmet": "^3.3.0",
-    "highlight.js": "*",
+    "helmet": "^3.5.0",
+    "highlight.js": "^9.10.0",
     "lodash": "^4.17.0",
     "lunr": "^0.7.2",
     "lusca": "^1.3.0",
-    "mongoose": "^4.8.2",
+    "mongoose": "^4.8.6",
     "navy-message-parser": "0.0.4",
     "node-uuid": "^1.4.3",
     "npmlog": "*",
-    "nsp": "*",
-    "opbeat": "^4.0.0",
+    "nsp": "^2.6.3",
+    "opbeat": "^4.11.2",
     "protocolify": "^1.0.2",
     "remarkable": "*",
     "request-promise": "^4.1.1",
-    "ws": "^2.0.0",
-    "x-ray": "^2.3.1",
+    "ws": "^2.2.0",
+    "x-ray": "^2.3.2",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
