--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
+    "bunyan": "^1.8.10",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "coveralls": "^2.13.0",
