--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bunyan": "^1.8.9",
     "compression": "^1.5.1",
     "config": "^1.14.0",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.13.1",
     "express-session": "^1.15.2",
@@ -36,10 +36,10 @@
     "mongoose": "^4.9.3",
     "navy-message-parser": "0.0.7",
     "node-uuid": "^1.4.8",
-    "npmlog": "*",
+    "npmlog": "^4.0.2",
     "nsp": "^2.6.3",
     "opbeat": "^4.13.0",
-    "remarkable": "*",
+    "remarkable": "^1.7.1",
     "request-promise": "^4.2.0",
     "ws": "^2.2.3",
     "x-ray": "^2.3.2",
